force-app/main/default/objects/Check_Log_Elements__c/Check_Log_Elements__c.object-meta.xml
<CustomObject>
    <label>Check Log Elements</label>
    <nameField>
        <label>Check Log Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Check Log Elements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>