force-app/main/default/objects/Check_Log_Elements__c/fields/Date_of_Check__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Check__c</fullName>
    <label>Date of Check</label>
    <type>Date</type>
</CustomField>