force-app/main/default/objects/Check_Log_Elements__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <displayFormat>CLE-{0000000}</displayFormat>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>