force-app/main/default/objects/Check_Log_Elements__c/fields/Payer__c.field-meta.xml
<CustomField>
    <fullName>Payer__c</fullName>
    <label>Payer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>